--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "14.16.3",
+    "mongoose": "^8.8.0",
     "express": "^5.1.0"
   }
 }
