--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-ticket-bot",
   "version": "1.0.0",
-  "description": "Discord ticket management bot with interactive buttons",
+  "description": "Discord bot for ticket system and invite logs",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -10,13 +10,17 @@
   "keywords": [
     "discord",
     "bot",
-    "tickets"
+    "tickets",
+    "invite-logs"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Wisnhh",
+  "license": "MIT",
   "dependencies": {
-    "discord.js": "14.16.3",
-    "express": "^5.1.0",
+    "discord.js": "^14.16.3",
+    "express": "^4.21.1",
     "mongoose": "^8.19.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
