--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "ticketCategoryId": "1432728070254497793",
   "logChannelId": "",
   "setupChannelId": "",
-  "prizeJasaChannelId": "1432728210235195412",
+  "priceJasaChannelId": "1432728210235195412",
   "priceLockChannelId": "1432728847496777728",
   "staffRoles": [
     "1433507603123540008"
